--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.auth.LoginActivity">
+        <activity android:name=".ui.auth.SmsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -30,11 +30,12 @@
         <activity android:name=".ui.client.posted.XOfferListActivity" />
         <activity android:name=".ui.client.posted.CourierOfferPProfileActivity" />
         <activity android:name=".ui.client.active.CourierOfferAProfileActivity" />
-        <activity android:name=".ui.order.create.OrderNewActivity" />
         <activity android:name=".ui.client.OrderNewActivity" />
         <activity android:name=".ui.info.LocationActivity" />
         <activity android:name=".ui.info.PaymentTypeActivity" />
         <activity android:name=".ui.client.CategoryActivity" />
+        <activity android:name=".ui.client.XOrderDetailActivity" />
+        <activity android:name=".ui.auth.LoginActivity" />
     </application>
 
 </manifest>
