--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,16 +17,13 @@
         <activity android:name=".ui.auth.SmsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.order.create.OrderNew0Activity" />
-        <activity android:name=".ui.order.create.OrderNew1Activity" />
-        <activity android:name=".ui.order.create.OrderNew2Activity" />
-        <activity android:name=".ui.order.create.OrderNew3Activity" />
-        <activity android:name=".ui.order.create.OrderNew4Activity" />
-        <activity android:name=".ui.order.create.OrderNew5Activity" />
-        <activity android:name=".ui.client.XMainActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".ui.client.XMainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.client.posted.XOfferListActivity" />
         <activity android:name=".ui.client.posted.CourierOfferPProfileActivity" />
         <activity android:name=".ui.client.active.CourierOfferAProfileActivity" />
@@ -36,6 +33,10 @@
         <activity android:name=".ui.client.CategoryActivity" />
         <activity android:name=".ui.client.XOrderDetailActivity" />
         <activity android:name=".ui.auth.LoginActivity" />
+        <activity
+            android:name=".ui.courier.YMainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.courier.transport.TransportDetailActivity"></activity>
     </application>
 
 </manifest>
