--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.31'
 
     implementation 'com.android.support:appcompat-v7:27.1.0'
@@ -53,4 +53,5 @@ dependencies {
 
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.0'
     implementation 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    implementation 'id.zelory:compressor:2.1.0'
 }
